<resources>
    <string name="sure">确认</string>
    <string name="app_name">Xp_MapNavi</string>
    <string name="perease_input">   请输入目的地</string>
    <string name="searching">正在搜索..:</string>
    <string name="search">搜索</string>
    <string name="please_sure_text">请确认输入正确</string>
    <string name="navi">导航</string>
    <string name="around">周边</string>
    <string name="shouchang">收藏</string>
    <string name="load_get_msg">正在获取数据......</string>
    <string name="unknow_road">无名道路</string>
    <string name="negiht">附近</string>
    <string name="kmile">公里</string>
    <string name="mile">米</string>
    <string name="update_navi">更新路线</string>
    <string name="navi_change_title">路线偏好</string>
    <string name="navi_change_title_1">路线偏好:</string>
    <string name="congestion">躲避拥堵</string>
    <string name="cost">避免收费</string>
    <string name="hightspeed">高速优先</string>
    <string name="avoidhightspeed">不走高速</string>
    <string name="exit">退出</string>
    <string name="exit_navi">退出导航</string>
    <string name="calue_navi">规划路线</string>
    <string name="delete">删除</string>
    <string name="collor_poi">收藏的点</string>
    <string name="power_dong">充电桩</string>
    <string name="collect_poi">收藏的点</string>
    <string name="killmile_more">公里</string>
    <string name="mile_more">米</string>
    <string name="from">从</string>
    <string name="into">进入</string>
    <string name="hour">小时</string>
    <string name="min">分钟</string>
    <string name="onlymin">分</string>
    <string name="need">剩余</string>
    <string name="second">秒</string>
    <string name="company">公司</string>
    <string name="back_home">回家</string>
    <string name="lukuagg">路况</string>
    <string name="add_message">添加</string>
    <string name="search_keyword">搜索关键字</string>
    <string name="entra">进入</string>
    <string name="shengyu">剩余</string>
    <string name="navi_goon">继续导航</string>
    <string name="recalue">重导</string>
    <string name="seeyi">视角</string>
    <string name="findwhere_and_path">查找目的地/路线</string>
    <string name="pianhao">偏好</string>
    <string name="way_poi">途经</string>
    <string name="collect">收藏</string>
    <string name="watch_3d">3D</string>
    <string name="watch_follow">2D</string>
    <string name="watch_north">北上</string>
    <string name="input_poin">请输入目的地</string>
    <string name="radio_navi">轻导航</string>
    <string name="search_result">搜索结果</string>
    <string name="offine_map">离线地图</string>
    <string name="map_setting">地图设置</string>
    <string name="collect_like">收藏夹</string>
    <string name="collect_like_poi">收藏点地址</string>
    <string name="read_style">播报模式:</string>
    <string name="radie_navi">巡航播报:</string>
    <string name="say_more">详细播报</string>
    <string name="say_low">简洁播报</string>
    <string name="forway_lukuang">前方路况</string>
    <string name="safe_say">安全提醒</string>
    <string name="camera_say">电子眼播报</string>
    <string name="wechat_navi">微信导航:</string>
    <string name="from_wechat_to_car">从微信发送位置到车机</string>
    <string name="please_set">请设置</string>
    <string name="new_city">当前城市</string>
    <string name="all_city">全部城市</string>
    <string name="download">下载</string>
    <string name="download_waiting">正在下载</string>
    <string name="dowaload_error">下载异常</string>
    <string name="download_pause">暂停</string>
    <string name="download_complete">已下载</string>
    <string name="download_uzip">解压中</string>
    <string name="add_poi">添加地点</string>
    <string name="add_more">添加</string>
    <string name="please_input_poi">请输入地址</string>
    <string name="please_input_company">请输入公司地址</string>
    <string name="please_input_home">请输入家庭地址</string>
    <string name="find_poi_str_0">共找到\"</string>
    <string name="find_poi_str_1">\"相关</string>
    <string name="find_poi_str_2">个结果</string>
    <string name="num_mile">%s米</string>
    <string name="num_kilemile">%s公里</string>
    <string name="way_poi_dian">途经点</string>
    <string name="please_input_way_poi">请输入途径点</string>
    <string name="surpise_road">特殊路段</string>
    <string name="str_yunyin">运营商</string>
    <string name="str_power_pay">充电费</string>
    <string name="str_stop_pay">停车费</string>
    <string name="str_open_time">开放时间</string>
    <string name="stub_grup">充电桩</string>
    <string name="navi_find_way">路径规划</string>
    <string name="you_will_not_back">您有可能无法返回出发地！</string>
    <string name="you_will_not_array">您有可能无法到达目的地！</string>
    <string name="you_will_not_enage">预计到达目的地时续航不足，请及时充电。</string>
    <string name="add_collect_poi">添加收藏点</string>
    <string name="switch_navi">切换导航</string>
</resources>
