<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="430px"
    android:background="@color/alpha_00"
    android:layout_height="680px">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="45px"
        android:layout_marginLeft="45px"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="535px">
            <TextView
                android:textSize="40px"
                android:gravity="center"
                android:text="@string/navi_change_title"
                android:layout_width="match_parent"
                android:layout_height="120px" />
            <LinearLayout
                android:layout_marginLeft="40px"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <CheckBox
                    android:textSize="40px"
                    android:id="@+id/cbx_congestion"
                    android:text="@string/congestion"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <CheckBox
                    android:textSize="40px"
                    android:id="@+id/cbx_avoidhightspeed"
                    android:text="@string/avoidhightspeed"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <CheckBox
                    android:textSize="40px"
                    android:id="@+id/cbx_cost"
                    android:text="@string/cost"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <CheckBox
                    android:textSize="40px"
                    android:id="@+id/cbx_hightspeed"
                    android:text="@string/hightspeed"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/btn_enter"
            android:textSize="42px"
            android:textColor="@color/white"
            android:text="@string/update_navi"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="100px" />
    </LinearLayout>
    <ImageView
        android:id="@+id/btn_exit"
        android:src="@drawable/btn_dialog_quxiao"
        android:layout_width="90px"
        android:layout_height="90px" />
</RelativeLayout>